_sass/_page-beer.scss
/*

    Beer Page Layout

*/


.brewery-list {

    display: flex;
    flex-wrap: wrap;

    width: 100%;
    padding-top: 2rem;

    .brewery {
        padding-bottom: 2rem;
        list-style: none;
        text-align: center;
    }
    .logo {
        display: inline-block;
        width: 5rem;
        margin: 0 auto 1rem auto;
    }
    .details {
        // text-align: left;
    }
    .tbd {
        color: $color-darkgrey-hover;
        color: rgba($color-darkgrey-hover, 0.6);
        font-style: italic;        
    }

    &.coming-soon {
        padding-top: 6rem;
        margin-top: 2rem;
        border-top: solid 1px rgba(0, 0, 0, 0.2);
    }

    @include screen-medium {

        .brewery {
            flex: 1 1 33%;
            padding-bottom: 4rem;

            &:nth-child(3n + 1) {
                padding-right: 3rem;
            }
            &:nth-child(3n + 3) {
                padding-left: 3rem;
            }
        }

        &.coming-soon .brewery {
            flex: 1 1 25%;
            padding-left: 2rem;
            padding-right: 2rem;         

            &:nth-child(3n + 1) {
                padding-right: 2rem;
            }
            &:nth-child(3n + 3) {
                padding-left: 2rem;
            }
        }


    }
}

.beer-list {

    list-style: none;
    margin: 1rem 0 0 0;

    li {
        margin: 0 0 0.5rem 0;
    }
    .beer-name {
        margin: 0;
        font-size: 1rem;
    }
    .beer-description {
        margin: 0;
        color: $color-salmon;
    }

}

.beer-listing-1up {
    .secondary {
        width: 100%;
        padding: 2rem 0;
    }
}

